WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59437
Moar strict OwnPtr fixes for WebKit/chromium
https://bugs.webkit.org/show_bug.cgi?id=59437
Summary
Moar strict OwnPtr fixes for WebKit/chromium
Adam Barth
Reported
2011-04-26 01:00:55 PDT
Moar strict OwnPtr fixes for WebKit/chromium
Attachments
Patch
(14.52 KB, patch)
2011-04-26 01:01 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(15.41 KB, patch)
2011-04-26 08:21 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-04-26 01:01:42 PDT
Created
attachment 91079
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-04-26 08:12:28 PDT
Comment on
attachment 91079
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=91079&action=review
> Source/WebKit/chromium/src/WebDataSourceImpl.cpp:43 > +OwnPtr<WebPluginLoadObserver> WebDataSourceImpl::m_nextPluginLoadObserver;
Won't this make an exit-time destructor?
Adam Barth
Comment 3
2011-04-26 08:17:42 PDT
(In reply to
comment #2
)
> (From update of
attachment 91079
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=91079&action=review
> > > Source/WebKit/chromium/src/WebDataSourceImpl.cpp:43 > > +OwnPtr<WebPluginLoadObserver> WebDataSourceImpl::m_nextPluginLoadObserver; > > Won't this make an exit-time destructor?
exit-time destructors are allowed in Chromium. I can change this not be one, if you like.
Adam Barth
Comment 4
2011-04-26 08:21:28 PDT
Created
attachment 91109
[details]
Patch
Adam Barth
Comment 5
2011-04-26 08:27:11 PDT
Patch updated to avoid exit-time destructor.
David Levin
Comment 6
2011-04-26 08:38:38 PDT
Comment on
attachment 91109
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=91109&action=review
Glad you got rid of the exit time destructor (as it bothered me too when I glanced at this before going off to bed). Only one comment to consider.
> Source/WebKit/chromium/src/WebDevToolsAgentImpl.cpp:319 > +void WebDevToolsAgent::interruptAndDispatch(MessageDescriptor* rawDescriptor)
Yeah for decent variable names.
> Source/WebKit/chromium/src/WebDevToolsAgentImpl.cpp:342 > + PageScriptDebugServer::interruptAndRun(new DebuggerTask(descriptor.release()));
Seems odd that there is no adopt of the "new DebuggerTask" here.
Adam Barth
Comment 7
2011-04-26 10:02:28 PDT
> > Source/WebKit/chromium/src/WebDevToolsAgentImpl.cpp:342 > > + PageScriptDebugServer::interruptAndRun(new DebuggerTask(descriptor.release())); > > Seems odd that there is no adopt of the "new DebuggerTask" here.
Good question: static void interruptAndRun(PassOwnPtr<Task>); Ah! I've figured it out. I haven't been removing the LOOSE_PASS_OWN_PTR define in PassOwnPtr.h!
WebKit Commit Bot
Comment 8
2011-04-26 11:23:33 PDT
Comment on
attachment 91109
[details]
Patch Clearing flags on attachment: 91109 Committed
r84933
: <
http://trac.webkit.org/changeset/84933
>
WebKit Commit Bot
Comment 9
2011-04-26 11:23:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug