Source/WebKit/chromium/src/StorageNamespaceProxy.cpp
@@ -24,6 +24,10 @@
  */
 
 #include "config.h"
+
+// FIXME: Remove this define!
+#define LOOSE_OWN_PTR
+
 #include "StorageNamespaceProxy.h"
 
 #if ENABLE(DOM_STORAGE)
